# mixer

./: .gitignore  Makefile  Makefile.am  README  autogen.sh  configure.ac
doc/: README
include/: layout.h  mutex_object.h  stream.h
lib/: Layout.cpp
libmixer/: Doxyfile  Makefile.am  README.md  crop.cpp  crop.h  layout.cpp  layout.h  stream.cpp  stream.h  testlibmixer.cpp
src/: Doxyfile  Layout.cpp  README.md  Stream.cpp  controller.cpp  event.cpp  event.h  eventqueue.cpp  layout.cpp  mixer.cpp  mixer.h  mutex_object.cpp  stat_manager.cpp  stat_manager.h  stream.cpp
src/doc/: compileGuide  compileGuide~
src/include/: layout.h  mixer.h  stream.h
tests/: test.cpp  ug_dec_enc_video_test.cpp  ug_decoding_video_test.cpp  videotest.cpp
